[UPDATE] flip 버튼 뼈대 구성

--- a/index.html
+++ b/index.html
@@ -15,11 +15,14 @@
     const root = document.getElementById("root");
     function App() {
       const [minutes, setMinutes] = React.useState();
+      const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
         setMinutes(event.target.value);
       };
       const reset = () => setMinutes();
-
+      const onFlip = () => {
+        console.lof("flipped");
+      };
       return (
         <div>
           <h1 className="h1">Super Converter</h1>
@@ -38,9 +41,11 @@
             id="hours"
             placeholder="Hours"
             type="number"
+            disabled
           />
 
           <button onClick={reset}>reset</button>
+          <button onClick={onFlip}>flip</button>
         </div>
       );
     }
