--- a/index.html
+++ b/index.html
@@ -14,38 +14,39 @@
   <script type="text/babel">
     const root = document.getElementById("root");
     function App() {
-      const [minutes, setMinutes] = React.useState();
+      const [amount, setAmount] = React.useState();
       const [flipped, setFlipped] = React.useState(false);
       const onChange = (event) => {
-        setMinutes(event.target.value);
+        setAmount(event.target.value);
       };
-      const reset = () => setMinutes();
-      const onFlip = () => {
-        console.lof("flipped");
-      };
+      const reset = () => setAmount();
+      const onFlip = () => setFlipped((current) => !current);
       return (
         <div>
-          <h1 className="h1">Super Converter</h1>
+          <h1>Super Converter</h1>
           <label htmlFor="minutes">Minutes</label>
           <input
-            value={minutes}
+            value={flipped ? amount * 60 : amount}
             id="minutes"
             placeholder="Minutes"
             type="number"
             onChange={onChange}
+            //disabled={flipped === true}
+            disabled={flipped}
           />
 
           <label htmlFor="hours">Hours</label>
           <input
-            value={Math.round(minutes / 60)}
+            value={flipped ? amount : Math.round(amount / 60)}
             id="hours"
             placeholder="Hours"
             type="number"
-            disabled
+            onChange={onChange}
+            disabled={!flipped}
           />
 
           <button onClick={reset}>reset</button>
-          <button onClick={onFlip}>flip</button>
+          <button onClick={onFlip}>Flip</button>
         </div>
       );
     }
