--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <script src="https://unpkg.com/react-dom@18.0.0/umd/react-dom.production.min.js"></script>
   <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="text/babel">
-    function Btn({ text }) {
-      console.log(props);
+    function Btn({ text, changeValue }) {
       return (
         <button
+          onClick={changeValue}
           style={{
             backgroundColor: "tomato",
             color: "white",
@@ -30,9 +30,11 @@
     }
 
     function App() {
+      const [value, setValue] = React.useState("Save Changes");
+      const changeValue = () => setValue("Revert Change");
       return (
         <div>
-          <Btn text="Save Changes" />
+          <Btn text={value} changeValue={changeValue} />
           <Btn text="Confirm" />
         </div>
       );
